# axum-template

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  cargo-generate.toml  compose.yml  config.toml  justfile  post-generate.rhai  posts.db
.cargo/: config.toml
.generate/: Cargo.toml.template  Dockerfile.template  README.md.template  justfile.template
.generate/.github/workflows/: ci.yaml  release.yaml.template
.generate/src/: lib.rs.template
.generate/systemd/: axum-template.service.template  cloudflared-config.yml.template  cloudflared.service.template  setup.sh.template
.generate/templates/: head.html.template
.github/workflows/: ci.yaml  release.yaml
.template/: Cargo.toml.template  Dockerfile.template  Makefile.template  README.md.template  justfile.template
.template/.github/workflows/: ci.yaml  release.yaml.template
.template/src/: lib.rs.template  main.rs.template
.template/systemd/: axum-template.service.template  cloudflared-config.yml.template  cloudflared.service.template  setup-pi.sh.template  setup.sh.template
docker/: compose.yml
docker/arm/: Dockerfile.cross  build.sh
src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  state.rs  test_utils.rs  tls.rs
src/api/: mod.rs  posts.rs  projects.rs
src/db/: mod.rs  models.rs  sqlite.rs  surreal.rs
src/handlers/: admin.rs  mod.rs
src/how_to/: form_zip.rs  mod.rs
static/: browserconfig.xml  custom.css  manifest.json  sitemap-0.xml  sitemap-index.xml
static/css/: custom.css  glitch.css
static/favicon/: site.webmanifest
static/js/: admin.js  auth.js  particles-cfg.js  slug-generator.js
systemd/: axum-template.service  cloudflared-config.yml  cloudflared.service  setup.sh
templates/: 404.html  about.html  blog.html  contact.html  footer.html  head.html  home.html  nav.html  post-detail.html  project-detail.html  projects.html
templates/admin/: dashboard.html  forgot-password.html  login.html  post-edit.html  posts.html  project-edit.html  projects.html  reset-password.html  team.html
tests/: integration.rs
