[package]
name = "axum-template"
version = "0.2.0"
authors = ["Oleks Pickle <22867443+olekspickle@users.noreply.github.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/olekspickle/axum-template"
description = """
Axum server example with askama templates with sqlx/surrealdb setup.
Featuring simple company portfolio pages and blog and basic admin auth with cookies.
"""

[features]
default = ["sqlite"]
sqlite = ["dep:sqlx"]
surreal = ["dep:surrealdb"]

[dependencies]
anyhow = "1"
argon2 = { version = "0.6.0-rc.8", features = ["rand_core"] }
askama = "0.16"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "multipart"] }
chrono = "0.4"
displaydoc = "0.2.5"
hex = "0.4.3"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server"] }
pulldown-cmark = "0.13"
rustls = "0.23.15"
rustls-pemfile = "2.1"
sha2 = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_default_utils = {version =  "0.3.1", features = ["inline"] }
surrealdb = { version = "3", optional = true }
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "chrono", "uuid"], optional = true }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
toml = "1"
tower-http = { version = "0.6", features = ["fs", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
zip = { version = "8", default-features = false, features = ["aes-crypto"] }
strum = { version = "0.28.0", features = ["derive"] }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
serde_json = "1"

